k8s/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: appplication-service
spec:
  selector:
    app: application-service
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
