k8s/pat-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  selector:
    app: patient-service
  ports:
  - port: 80
    targetPort: 3001
  type: ClusterIP
