k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /appointments
        pathType: Prefix
        backend:
          service:
            name: app-svc
            port:
              number: 80

      - path: /patients
        pathType: Prefix
        backend:
          service:
            name: pat-svc
            port:
              number: 80

      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: ord-svc
            port:
              number: 80
